update profile.html and register.html

--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -28,7 +28,7 @@
             <ul>
                 <li>Program: Information Technology</li>
                 <li>Matric: 00/0000</li>
-                <li>Ggraduation Year: 2019</li>
+                <li>Graduation Year: 2019</li>
             </ul>
         </section>
 
@@ -45,7 +45,7 @@
                 <input type="text" name="matricNumber"> <br> <br>
                 <label for="program">Program:</label>
                 <select name="program">
-                  <option value="computer_science">Commputer Science</option>
+                  <option value="computer_science">Computer Science</option>
                   <option value="computer_information_systems">Computer Information Systems</option>
                   <option value="computer_technology">Computer Technology</option>
                 </select> <br><br>
@@ -65,14 +65,14 @@
         </section>
 
         <section>
-            <h2>Update Password</h2>
+            <h2>Change Password</h2>
             <form action="">
-                <label for="currentPassword">Current Password</label>
+                <label for="currentPassword">Current Password:</label>
                 <input type="password" name="currentPassword"> <br><br>
-                <label for="newPassword">New Password</label>
-                <input type="password" name="currentPassword"> <br><br>
-                <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="currentPassword"> <br><br>
+                <label for="newPassword">New Password:</label>
+                <input type="password" name="newPassword"> <br><br>
+                <label for="confirmPassword">Confirm Password:</label>
+                <input type="password" name="confirmPassword"> <br><br>
                 <input type="submit">
             </form>
         </section>
