--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -23,7 +23,7 @@
     </nav>
 
     <main>
-        <h1>Sign up</h1>
+        <h1>Signup</h1>
         <form action="">
             <label for="firstName">First Name:</label>
             <input type="text" name="firstName"> <br> <br>
@@ -37,7 +37,7 @@
             <input type="text" name="matricNumber"> <br> <br>
             <label for="program">Program:</label>
             <select name="program">
-              <option value="computer_science">Commputer Science</option>
+              <option value="computer_science">Computer Science</option>
               <option value="computer_information_systems">Computer Information Systems</option>
               <option value="computer_technology">Computer Technology</option>
             </select> <br><br>
