Styled HTML pages for Project Explorer in Bootstrap

--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -46,7 +46,7 @@
         </h4>
         
         <div class="container bg-light p-4 mt-5">
-            <div class="row  align-items-center">
+            <div class="row align-items-center">
                 <div class="col">
                     <ul class="list-unstyled">
                         <li>Program:</li>
@@ -125,16 +125,16 @@
 
             <div class="form-row">
                 <div class="form-group col-md-4">
-                    <label for="password" class="form-label">Current Password</label>
-                    <input type="password" class="form-control" name="password" placeholder="Current Password">
+                    <label for="currentPassword" class="form-label">Current Password</label>
+                    <input type="password" class="form-control" name="currentPassword" placeholder="Current Password">
                 </div>
                 <div class="form-group col-md-4">
-                    <label for="password" class="form-label">Your new Password</label>
-                    <input type="password" class="form-control" name="password" placeholder="Your new Password">
+                    <label for="newPassword" class="form-label">Your new Password</label>
+                    <input type="password" class="form-control" name="newPassword" placeholder="Your new Password">
                 </div>
                 <div class="form-group col-md-4">
-                    <label for="password" class="form-label">Confirm new Password</label>
-                    <input type="password" class="form-control" name="password" placeholder="Confirm new Password">
+                    <label for="confirmPassword" class="form-label">Confirm new Password</label>
+                    <input type="password" class="form-control" name="confirmPassword" placeholder="Confirm new Password">
                 </div>
                 
             </div>
