--- a/app/public/project-explorer/createproject.html
+++ b/app/public/project-explorer/createproject.html
@@ -43,27 +43,28 @@
     <main class="container mt-5">
 
         <form class="mx-auto w-75 p-3" name="submitProject">
-            <h2>Submit Project</h2>
-            <div class="form-group">
+          <h2>Submit Project</h2>
+          <div class="form-row">
+            <div class="form-group col-12">
               <label for="name" class="form-label">Project name</label>
               <input type="text" class="form-control" name="name"  placeholder="Enter project name">
             </div>
 
-            <div class="form-group">
+            <div class="form-group col-12">
                 <label for="abstract" class="form-label">Project abstract</label>
                 <textarea class="form-control" name="abstract" rows="6"></textarea>
             </div>
 
-            <div class="form-group">
+            <div class="form-group col-12">
                 <label for="authors" class="form-label">Author(s)</label>
                 <input type="text" class="form-control" name="authors"  placeholder="Enter author names (seperated by comma)">
             </div>
 
-            <div class="form-group">
+            <div class="form-group col-12">
                 <label for="tags" class="form-label">Tag(s)</label>
                 <input type="text" class="form-control" name="tags"  placeholder="Use # to tag project with different topics (e.g. #javascript, #mongodb">
             </div>
-            
+          </div>
             
             <button type="submit" class="btn btn-primary">Continue</button>
           </form>
