--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -55,7 +55,7 @@
                     <div class="form-group col-12 col-sm-12 col-md-4 col-lg-3">
                         <div class="input-group">
                             <label class="input-group-text form-label" for="searchType">Search by</label>
-                            <select class="form-select form-control form-control-lg" name="searchType">
+                            <select class="form-control form-control-lg" name="searchType">
                               <option value="Name">Name</option>
                               <option value="Abstract">Abstract</option>
                               <option value="Authors">Authors</option>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
 
-                    <div class="form-group col-3 col-sm-2 col-md-2 col-lg-1">
+                    <div class="col-3 col-sm-2 col-md-2 col-lg-1">
                         <button type="submit" class="btn btn-lg btn-primary ">Search</button>
                     </div>
                     
