--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -71,7 +71,7 @@
         <h5 class="mt-5">Update Profile</h5>
         <hr> <!--horizontal line-->
 
-        <form action="" class="mx-auto w-75">
+        <form class="mx-auto w-75">
 
             <div class="form-row">
                 <div class="form-group col-md-6">
@@ -114,14 +114,13 @@
                     </select>
                 </div>
             </div>
-
             <button type="submit" class="btn btn-primary">Update Profile</button>
         </form>
 
         <h5 class="mt-5">Update Password</h5>
         <hr> <!--horizontal line-->
 
-        <form action="" class="mx-auto w-75">
+        <form class="mx-auto w-75">
 
             <div class="form-row">
                 <div class="form-group col-md-4">
@@ -136,10 +135,10 @@
                     <label for="confirmPassword" class="form-label">Confirm new Password</label>
                     <input type="password" class="form-control" name="confirmPassword" placeholder="Confirm new Password">
                 </div>
-                
             </div>
 
             <button type="submit" class="btn btn-primary">Update Password</button>
+            
         </form>
 
         <footer class="container-fluid bg-light p-3 mt-3">
