--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -45,9 +45,8 @@
     <main class="container">
         <h4 class="mt-3">Project Gallery</h4>
 
-        <section class="container bg-light p-3 mt-3">
-            <form action="" name="searchForm">
-                
+        <div class="container bg-light p-3 mt-3">
+            <form>
                 <div class="form-row">
                     <div class="form-group col-12 col-sm-12 col-md-6 col-lg-8">
                         <input class="form-control form-control-lg" name="searchTerm" type="text" placeholder="Search Projects, authors, abstracts, tags">
@@ -71,7 +70,7 @@
                 </div>
             </form>
 
-        </section>
+        </div>
         
         <h5 class="mt-5">
             All projects
